Back to languageserver-neovim instead of coc, some fixes

--- a/lsp/settings.json
+++ b/lsp/settings.json
@@ -1,5 +1,16 @@
 {
     "initializationOptions": {
         "cacheDirectory": ".lsp-cache"
+    },
+    "pyls": {
+        "configurationSources": ["flake8"],
+        "plugins": {
+            "mccabe": {
+                "enabled": false
+            },
+            "pyls_mypy": {
+                "live_mode": false
+            }
+        }
     }
 }
